--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,3 +1,14 @@
+:root{
+    --primary-color: #013F62;
+    --white-color:#fff;
+    --input--background-color:#D9D9D9;
+    --link-color:#0172B2;
+    --error:#D93025;
+    --input-text:#212121;
+    --font--1:Linden Hill;
+    --input-background--2:#641314;
+}
+
 body{
     margin: 0;
     padding: 0;
