--- a/Public/css/navbar.css
+++ b/Public/css/navbar.css
@@ -14,29 +14,56 @@ margin: 0;
 padding: 0;    
 }
 
-nav{
-    width: 97%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-   
-
-}
-
-.auth{
-    border: 2px solid var(--primary-color);
-    /* background-color: var(--primary-color); */
+.container{
     padding: 0.5rem;
-    border-radius: 50px;
 }
-span:hover{
-    color:var(--primary-color) ;
+.auth{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.authbut{
+    border: 2px solid var(--primary-color);
+    padding:0 1.1rem;
+    border-radius: 30px;
+    /* background-color: var(--primary-color); */
+}
+
+.authbut span a{
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--primary-color);
+    font-size: 1.2rem;
 
 }
-span{
-    cursor: pointer;
+
+
+.authbut #login a:hover{
+    color: var(--white-color);
+    background-color: var(--primary-color);
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    padding: 0 0.7rem;
 }
-span a{
-    text-decoration: none ;
-    color: black;
+.authbut #register a:hover{
+    color: var(--white-color);
+    background-color: var(--primary-color);
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 0 0.7rem;
+}
+
+.btn, input[type="search"]{
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+input[type="search"]:focus{
+    box-shadow: 0 0 0 2px var(--primary-color);
+}
+
+.btn:hover{
+    background-color: var(--primary-color);
+    color: white;
 }
